@@ -1,5 +1,5 @@
 # Color Switch
-JavaFx Implementation of popular game Color Switch developed by Fortafy Games https://colorswitch.co/
+JavaFX Implementation of popular game Color Switch developed by Fortafy Games https://colorswitch.co/
 
 ## About
 Color Switch is an obstacle-based gaming app. The objective of the app is to play through levels of increasing difficulty, by tapping a small ball of a certain colour through shapes of a matching colour. The skills required to use the app include quick reflexes and and motor skills.
@@ -7,7 +7,7 @@ Color Switch is an obstacle-based gaming app. The objective of the app is to pla
 ## Installation Guide
 
 ### Set up JDK
-Java 13 and JavaFX 6 is required to run this application.
+Java 13 and JavaFX 15 are required to run this application.
 
 <br />
 To install Java 13 on Debian / Ubuntu:
@@ -15,9 +15,18 @@ To install Java 13 on Debian / Ubuntu:
 ```sudo apt install openjdk-13-jdk```
 
 ### Install openjfx
-To install JavaFX on Debian / Ubuntu:
-<br />
-```sudo apt-get install openjfx```
+To install JavaFX 15, download package from here: 
+
+https://gluonhq.com/products/javafx/
+
 
 ### Run the game
 ```Run Main.java using an IDE```
+
+To setup on IntelliJ, follow this link: 
+
+https://www.jetbrains.com/help/idea/javafx.html
+
+In VM options, add the following line after replacing <javafx lib path>:
+ 
+```--module-path <javafx lib path> --add-modules javafx.controls,javafx.fxml,javafx.media```
